--- a/index.html
+++ b/index.html
@@ -12,36 +12,23 @@
     <div id="app">
 
         <div class="container" >
-            <div class="slider-wrapper" tabindex="0">
-
+            <div class="slider-wrapper" tabindex="0" @mouseover="stopAutoScroll" @mouseleave="autoScroll">
+                    <h1>{{game[activeIndex].title}}</h1>
                 <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                    <img :src="game[activeIndex].image" :alt="game.title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
+                        <h3>{{game[activeIndex].title}}</h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum corporis.
+                            {{game[activeIndex].text}}
                         </p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia"/>
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
+                    <div class="prev" @click="prevSlide"></div>
+                    <div class="next" @click="nextSlide"></div>
+                    <div class="thumb"  @click="clickShow(index)" v-for="(games,index) in game" :key="index" :class="index === activeIndex ? 'active' : ''">
+                        <img :src="game[index].image" :alt="game[activeIndex].title"/>
                     </div>
                 </div>
 
@@ -49,6 +36,7 @@
         </div>
 
     </div>
+    <script src="https://unpkg.com/vue@3"></script>
 
     <script src="js/script.js"></script>
 </body>
